# sealwire

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  TESTING.md  eslint.config.js  package-lock.json  package.json  railway.toml  vite.config.js
.github/workflows/: npm-release.yml  railway-broker-deploy.yml  rust-ci.yml
claude-worker/: ask-user-question.mjs  ask-user-question.test.mjs  fake-claude-worker-pending-repro.mjs  fake-claude-worker.mjs  fake-worker.test.mjs  file-diff.mjs  file-diff.test.mjs  image-input.test.mjs  package-lock.json  package.json  permissions.mjs  permissions.test.mjs  progress-tracker.mjs  progress-tracker.test.mjs  protocol.mjs  sdk-mapping.mjs  sdk-mapping.test.mjs  session-options.mjs  session-options.test.mjs  session-page.mjs  session-page.test.mjs  test-fake-sdk.mjs  worker-loop.test.mjs  worker.mjs  worker.test.mjs
crates/relay-broker/: Cargo.toml
crates/relay-broker/src/: blocklist.rs  events.rs  lib.rs  licenses.rs  main.rs  protocol.rs  public_control.rs  state.rs  tests.rs
crates/relay-broker/src/state/: tests.rs
crates/relay-broker/tests/: railway_deploy_config.rs
crates/relay-http/: Cargo.toml
crates/relay-server/: Cargo.toml  build.rs
crates/relay-server/src/: auth.rs  broker.rs  claude.rs  codex.rs  fake_provider.rs  file_changes.rs  main.rs  protocol.rs  protocol_tests.rs  provider.rs  state.rs  tests.rs
crates/relay-server/src/auth/: tests.rs
crates/relay-server/src/broker/: auth.rs  config_watcher.rs  credentials.rs  protocol.rs  remote_actions.rs  tests.rs
crates/relay-server/src/broker/remote_actions/: tests.rs
crates/relay-server/src/claude/: protocol.rs
crates/relay-server/src/codex/: rpc.rs  tests.rs
crates/relay-server/src/state/: app.rs  persistence.rs  relay.rs  review.rs  task_list.rs  tests.rs  workflow.rs
crates/relay-server/src/state/app/: approvals.rs  broker.rs  fork.rs  mod.rs  pairing.rs  providers.rs  review.rs  sessions.rs  task_list.rs  tests.rs  threads.rs  transcript.rs  workflow.rs
crates/relay-server/src/state/relay/: approval.rs  ask_user_question.rs  background.rs  device.rs  push.rs  runtime.rs  transcript.rs
crates/relay-util/: Cargo.toml
docker/: broker.Dockerfile
docs/: testing-matrix.md
frontend/: app.js  composer.test.mjs  conversation.css  desktop.html  fork-session-dialog.test.mjs  index.html  local-app.js  local-ui-store.test.mjs  markdown.test.mjs  pairing-helpers.test.mjs  progress-verbs.js  progress-verbs.test.mjs  reasoning-efforts.test.mjs  remote-mobile-brand.test.mjs  remote.html  render-security.test.mjs  reviewer-threads.test.mjs  scroll-to-bottom.test.mjs  security-panels.test.mjs  session-stream.js  session-stream.test.mjs  settings-controls-contract.test.mjs  start-session-dialog.test.mjs  stick-to-bottom.test.mjs  styles.css  svg.js  svg.test.mjs  thread-activity.test.mjs  thread-groups.test.mjs  thread-promotion.test.mjs  thread-queries.test.mjs  transcript-cross-layer.test.mjs  transcript-history-loader.test.mjs  transcript-hydration-perf.test.mjs  transcript-hydration-retention.test.mjs  transcript-hydration-store.test.mjs  transcript-react.test.mjs  transcript-render.test.mjs  transcript-scroll.test.mjs  transcript-streaming-conversation.test.mjs  (+2 more)
frontend/desktop/: desktop-theme.test.mjs  desktop.css  desktop.js  dev-url.test.mjs  ui-util.mjs  ui-util.test.mjs
frontend/local/: api.js  api.test.mjs  dom.js  header-band-sync.js  image-attachments.js  image-attachments.test.mjs  pairing-scope-parse.js  pairing-scope-parse.test.mjs  (+25 more)
scripts/: agent-relay.mjs  browser-claude-local-e2e.mjs  browser-desktop-launcher-e2e.mjs  browser-local-allowed-roots-e2e.mjs  browser-local-auth-e2e.mjs  browser-local-delete-e2e.mjs  browser-local-drawer-scroll-e2e.mjs  browser-local-file-diff-e2e.mjs  browser-local-history-scroll-e2e.mjs  browser-local-permission-modes-e2e.mjs  browser-local-session-e2e.mjs  browser-local-thread-groups-e2e.mjs  browser-local-thread-interleaving-e2e.mjs  browser-local-thread-settings-e2e.mjs  browser-local-transcript-load-e2e.mjs  browser-local-view-only-models-e2e.mjs  browser-page-smoke-e2e.mjs  browser-pairing-e2e.mjs  browser-public-broker-e2e.mjs  browser-public-enrollment-e2e.mjs  browser-public-long-transcript-e2e.mjs  browser-public-multi-remote-follow-e2e.mjs  browser-public-persistence-e2e.mjs  browser-public-reclaim-e2e.mjs  browser-public-refresh-e2e.mjs  browser-public-remote-follow-e2e.mjs  browser-public-revoke-e2e.mjs  browser-public-settings-load-e2e.mjs  browser-public-thread-interleaving-e2e.mjs  browser-public-thread-settings-e2e.mjs  browser-public-transcript-delta-e2e.mjs  browser-rail-toggle-align-e2e.mjs  browser-remote-mobile-header-e2e.mjs  browser-scroll-to-bottom-e2e.mjs  browser-stick-to-bottom-e2e.mjs  claude-provider-e2e.mjs  dev-full.mjs  e2e-codex-home.mjs  e2e-thread-cleanup.mjs  fake-codex-app-server.mjs  (+23 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+225 files in other folders)
