[workspace]
members = ["crates/relay-broker", "crates/relay-http", "crates/relay-server", "crates/relay-util"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Elastic-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = "2"
futures-util = "0.3"
hmac = "0.12"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
xsalsa20poly1305 = "0.9.1"
