[package]
name = "sealwire-desktop"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-shell = "2.3.5"
url = "2"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
