[package]
name = "relay-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hmac.workspace = true
rand.workspace = true
relay-http = { path = "../relay-http" }
relay-util = { path = "../relay-util" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest.workspace = true
