[package]
name = "relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axum.workspace = true
claude-code-client-sdk = "0.1"
base64.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hmac.workspace = true
qrcode.workspace = true
rand.workspace = true
reqwest.workspace = true
relay-broker = { path = "../relay-broker" }
relay-http = { path = "../relay-http" }
relay-util = { path = "../relay-util" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
xsalsa20poly1305.workspace = true

[dev-dependencies]
tempfile = "3"
